# bash-style-guide

./: .editorconfig  .gitignore  404.html  CHANGELOG.md  CNAME  Pipfile  README.md  TODO.md  index.html  mkdocs-requirements.txt  mkdocs.yml  pyproject.toml  sitemap.xml  sss.md  zensical.toml
.github/: dependabot.yml
.github/workflows/: mkdocs-deploy.yml  pr-build.yml  zensical-deploy.yml
Examples/: 1.md  2.md  example-1.md  example-2.md
content/: aesthetics.md  bashism.md  error-handling.md  style.md
docs/: CNAME  index.md
docs/guidelines/: aesthetics.md  bash-idioms.md  bashism.md  error-handling.md  style.md
docs_to_add/guidelines/: common-mistakes.md
guidelines/: aesthetics.md  bashism.md
guidelines/aesthetics/: index.html
guidelines/bashism/: index.html
guidelines/error-handling/: index.html
guidelines/style/: index.html
other/changelog/: index.html
other/license/: index.html
other/todo/: index.html
overrides/partials/integrations/analytics/: matomo.html
search/: search_index.json
