[project]
name = "bash-style-guide"
version = "2025.3.7"
requires-python = "~=3.12"
dependencies = [
    "mkdocs-git-revision-date-localized-plugin==1.4.5",
    "mkdocs-material==9.6.11",
    "mkdocs-exclude==1.0.2",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
