[project]
name = "bash-style-guide"
version = "2025.7.15"
description = "A comprehensive style guide and documentation resource for writing robust, readable, and maintainable Bash scripts."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mkdocs-git-revision-date-localized-plugin==1.5.0",
    "mkdocs-material==9.6.22",
    "mkdocs-exclude==1.0.2",
]
